<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.helloandroid.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/Udacity_Picture"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="5.5"
            android:scaleType="centerCrop"
            android:src="@drawable/udacity_picture_2"
            />

        <RelativeLayout
            android:id="@+id/Big_U"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.8"
            android:background="#02B3E4"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/U_left"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_weight="1.3"
                    android:background="#9E9E9E"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/U"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:text="@string/U_right"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Big_D"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.8"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/D_left"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_weight="1.3"
                    android:background="#9E9E9E"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/D"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:text="@string/D_right"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/Big_A"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.8"
            android:background="#02B3E4"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/A_left"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_weight="1.3"
                    android:background="#9E9E9E"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/A"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:text="@string/A_right"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Big_C"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.8"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/C_left"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_weight="1.3"
                    android:background="#9E9E9E"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/C"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:text="@string/C_right"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Big_I"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="0.8"
            android:background="#02B3E4"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:text="@string/I_left"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_weight="1.3"
                    android:background="#9E9E9E"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/I"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:text="@string/I_right"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Big_T"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.8"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/T_left"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1.3"
                android:background="#9E9E9E"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/T"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:text="@string/T_right"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Big_Y"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.8"
        android:background="#02B3E4"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/Y_left"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1.3"
                android:background="#9E9E9E"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/Y"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:text="@string/Y_right"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

        <TextView
            android:id="@+id/motivation"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:background="#9E9E9E"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/motivation"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2.5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="3sp"
                    android:src="@drawable/url_icon" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:autoLink="web"
                    android:gravity="center"
                    android:text="@string/web_address"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="3sp"
                    android:src="@drawable/phone_icon" />

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:autoLink="phone"
                    android:gravity="center"
                    android:text="@string/number"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic"
            />

    </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>

